--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@prisma/client": "^7.2.0",
     "@thallesp/nestjs-better-auth": "^2.2.0",
     "bcrypt": "^6.0.0",
+    "better-auth": "^1.4.9",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.3",
     "dotenv": "^17.2.3",
